change the login input fields ,updated with animated labels ,fix the styles and justify the element margins in the page ,tested on mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -41,16 +41,17 @@ div#root {
   -ms-flex-direction: column;
   margin-bottom: 5px;
   flex-direction: column;
-  margin-top: -40px;
+  margin-bottom: 20px;
   position: relative;
 }
 .logo-header{
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 20px;
 }
 .login-header-title{
-  font-size: 27.2px;
+  font-size:20px;
   text-transform: uppercase;
   color: #2B3748;
   align-content: center;
@@ -82,7 +83,7 @@ div#root {
 }
 .form-input{
   margin: 10px 5px;
-  width: 80%;
+  min-width: 280px;
   height: 25px;
   position: relative;
   display: flex;
@@ -126,16 +127,18 @@ div#root {
     box-shadow: 0 2px 9px rgba(0, 0, 0, 0.05);
     border: none;
     border-radius: 3px;
-    padding: 5px 10px;
+    padding: 8px 22px;
     cursor: pointer;
     font-weight: bold;
     outline: none;
-    width: 150.6px;
     color: #FFF;
     background: #4DA1FF;
     box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.05);
     border-radius: 3px;
     transition: all 350ms ease-in-out;
+}
+.form-submit:hover{
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
 }
 
 .form-input input::placeholder{
